# miniDraw

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
engine/: CMakeLists.txt  README.md
engine/include/: engine.hpp
engine/src/: engine.cpp
public/engine/: engine.mjs
src/: App.tsx  styles.css
src/components/canvas/: StageCanvas.tsx
src/components/layout/: TopBar.tsx
src/components/panel/: RightPanel.tsx
src/components/toolbar/: BottomToolbar.tsx
src/engine/: messages.ts  types.ts
src/hooks/: useEngine.ts
src/types/: engine-module.d.ts  tools.ts
src/utils/: dimensions.ts
src/worker/: engineWorker.ts
